[package]
name = "rust-hellokernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "hellokernel"
crate_type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2"

[build-dependencies]
cty = "0.2"
bindgen = "0.59.2"
